--- a/src/main/webapp/WEB-INF/test/404.html
+++ b/src/main/webapp/WEB-INF/test/404.html
@@ -46,7 +46,7 @@ p {
 		<div class="one-big-column">
 			<h1>404</h1>
 			<p>Niestety strona o podanym adresie nie istnieje</p>
-			<img src="../../resources/images/404.jpg/>
+			<img src="../../resources/images/404.jpg"/>
 		</div>
 	</div>
 
