--- a/src/main/webapp/WEB-INF/test/test.html
+++ b/src/main/webapp/WEB-INF/test/test.html
@@ -1,190 +1,105 @@
 <!DOCTYPE html>
+
 <html xmlns:th="http://www.thymeleaf.org">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin-ext">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Sansita&subset=latin-ext">
-<link rel="stylesheet" type="text/css" href="../../resources/mainStyle.css" th:href="@{/resources/mainStyle.css}">
-<link rel="stylesheet" href="../../resources/font-awesome/css/font-awesome.min.css" th:href="@{/resources/font-awesome/css/font-awesome.min.css}">
-<link rel="icon" href="../../resources/images/moose_front.png" th:href="@{/resources/images/moose_front.png}">
+<link rel="stylesheet" type="text/css" href="../../resources/mainStyle.css">
+<link rel="stylesheet" href="../../resources/font-awesome/css/font-awesome.min.css">
+<link rel="icon" href="../../resources/images/moose_front.png">
+
 <meta charset="UTF-8">
-<head>
-<title>Przyjaciule - Twój profil</title>
 
-<style>
+  <body>
+  
+	<div th:fragment="navigationBar" id="nav-container" class="nav-container container-width">
+		<ul id="navigationBar" class="container-width">
+			<li style="float: left"><a href="allUsers.html" th:href="@{/allUsers}">Przyjaciule</a></li>
+			<li><a href="#about">Ustawienia</a></li>
+			<li><a href="#about">Powiadomienia</a></li>
+			<li><a href="#about">Wiadomości</a></li>
+			<li><a id="new-invitations-button" onclick="frondInvitationDropDown()">Zaproszenia</a>
+				<div id="invitationCounter" class="invitation-counter" th:text="${newInvitations}">
+					0 
+				</div>
+				<div id="myDropdown" class="dropdown-content">
+					NIE MASZ NOWYCH ZAPROSZEŃ
+					<!-- doczytywane po załadowaniu strony z fragmentu invitations -->
+				</div> 
+			</li>
+			<li><a href="#news">Wall</a></li>
+			<li>
+				<img id="myAvatarOnNav" class="myAvatarOnNav" alt="moose" src="../../resources/images/moose-avatarxs.jpg" 
+					th:alt="${user.firstName}" th:src="@{/myProfile/miniatureDisplay}" />
+				<a href="myProfile.html" th:href="@{/myProfile}">Mój profil</a>
+			</li>
+		</ul>
+		<script>
 
-div.one-big-column {
-	margin: auto;
-	margin-top: 50px;
-	display: flex;
-	background-color: white;
-    width: 1037px;
-    height: auto;
-    min-height: 100px;
-	border-radius: 5px;
-	padding: 10px;
-}
+		function invitationAccept(relationshipId) {
+			$.get("navi/invitationAccepted/"+relationshipId);
+			$('#invitationId'+relationshipId).fadeOut(400, decreaseInvitationsCounter());
+			
+		}
 
-.login-box {
-	margin: 50px;
-	margin-top: 100px;
-	background-color: white;
-	border-radius: 15px;
-	border-color: #4597ba;
-	border-style: solid;
-	border-width: 5px;
-	width: 400px;
-	height: 300px;
-	padding: 10px;
+		function invitationDecline(relationshipId) {
+			$.get("navi/invitationDeclined/"+relationshipId);
+			$('#invitationId'+relationshipId).fadeOut(400, decreaseInvitationsCounter());
+		}
 
-}
+		function decreaseInvitationsCounter() {
+			$("#invitationCounter").text($("#invitationCounter").text() - 1);
+			if($("#invitationCounter").text() == 0)
+				$("#invitationCounter").fadeOut();
+		}
 
-.register-box {
-	margin: 50px;
-	background-color: white;
-	border-radius: 15px;
-	border-color: #4597ba;
-	border-style: solid;
-	border-width: 5px;
-	width: 400px;
-	padding: 10px;
-}
+		
+		function frondInvitationDropDown() {
+		    document.getElementById("myDropdown").classList.toggle("show");
+		}
 
-p {
-	font-size: 16px;
-	font-family: Sansita;
-	width: 60px;
-	float:left;
-}
+		$("#myAvatarOnNav").click(function() {
+			var rootUrl = location.href.split("Fronds")[0];
+			window.location = rootUrl + "Fronds/myProfile";
+		});
 
-input[type=text], input[type=password] {
-	font-family: Sansita;
-	border-radius: 5px;
-	width: 300px;
-	height: 30px;
-	font-size: 18px;
-	margin: 10px;
-}
+		$(window).click(function(event) {
+			
+			if (!$(event.target).is('#new-invitations-button')) {
+				// hehe
+				var parts = '.dropdown-content div, .checkIcon, .crossIcon, .new-invitation p, .new-invitation img, .dropdown-content';
+				if (!($(event.target).is(parts))) {
+				    var dropdowns = document.getElementsByClassName("dropdown-content");
+				    var i;
+				    for (i = 0; i < dropdowns.length; i++) {
+				      var openDropdown = dropdowns[i];
+				      if (openDropdown.classList.contains('show')) {
+				        openDropdown.classList.remove('show');
+				      }
+				    }
+				}
+			  }
+		});
 
-input[type=submit] {
-	font-family: Sansita;
-	font-size: 16px;
-	border-radius: 5px;
-	height: 40px;
-	width: 150px;
-	margin-right: 25px;
-	float: right;
-}
+		
+		 $(document).ready(function(){
+			var rootUrl = location.href.split("Fronds")[0];
+			$.get(rootUrl + "Fronds/navi/getInvitationsCount", function(data) {
+				if(data != 0) {
+					$("#invitationCounter").text(data);
+					$("#invitationCounter").show();
+					$("#myDropdown").load(rootUrl + "Fronds/navi/getInvitations");
+				}
+			}); 
+		});
 
-#profilePictureInput {
-	cursor: pointer;
-}
-
-h1.login {
-	float: left;
-	font-family:Lobster;
-	margin-left: 90px
-}
-
-h1.register {
-	position: relative;
-	right: 40px;
-	float: right;
-	font-family:Lobster;
-	margin-left: 90px
-}
-
-img.los {
-	position: relative;
-	left: 40px;
-	bottom: 10px;
-	width: 100px;
-	height: 100px;
-}
-
-img.los2 {
-	position: relative;
-	bottom: 10px;
-	width: 100px;
-	height: 100px;
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-    filter: FlipH;
-    -ms-filter: "FlipH";
-}
-
-
-div.error-div {
-	background-color:red;
-	height: 40px;
-	width: 160px;
-	float:left;
-	display:none;
-	
-}
-</style>
-
-</head>
-<body class="body-nomargins">
-	<div class="one-big-column">
-		<div class="login-box">
-			<h1 class="login"> Zaloguj się </h1>
-			<img class = "los" src="../../resources/images/los_przebiega.png"></img>
-			<form method="POST" th:action="@{/login}">
-				<p>Login</p>
-				<input id="loginInput" type="text" name="login" />
-				<p>Hasło</p>
-				<input type="password" name="password" />
-				<input type="submit" value="Zaloguj się" />
-				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-			</form>		
-		</div>
-		<div class="register-box">
-			<img class = "los2" src="../../resources/images/los_przebiega.png"></img>
-			<h1 class="register"> Zarejestruj się </h1>
-			<form method="POST" th:action="@{/register}">
-				<p>Imię</p>
-				<input type="text" name="firstName" />
-				<p>Nazwisko</p>
-				<input type="text" name="lastName" />
-				<p>Login</p>
-				<input type="text" name="login" />
-				<p>Hasło</p>
-				<input type="password" name="password" />
-				<input id="openFileDialog" type="file" name="profilePicture" accept="image/jpeg,image/png,image/gif" style="display:none" />
-				<p>Japa</p>
-				<input id="profilePictureInput" type="text" value="Kliknij by wybrać" readonly/>
-				<input type="submit" value="Zarejestruj się" />
-				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-			</form>	
-		</div>
+		</script>
 	</div>
-</body>
-
-<script>
-
-	$("#profilePictureInput").click(function() {
-		$("#openFileDialog").click();
-	});
 	
-	$("#openFileDialog").on('change',function(){
-		var filename = $("#openFileDialog").val().replace(/.*(\/|\\)/, '');
-		$("#profilePictureInput").val(filename);
-	});
-
-	$(document).ready(function() {
-		$("#loginInput").focus();
-	});
-
- 	/* 
- 	podjebane kolory - dwa szare, dwa morsko-niebieskie
- 	
-		#c9c9c9
-		#e3e3e3
-		#9ad3de
-		#89bdd3
- 	*/
-
-</script>
+	<div th:fragment="rightColumn" class="right-column">
+			
+	</div>
+  
+  </body>
+  
 </html>
